feat: complete attested operation workflows