@@ -12,12 +12,22 @@ import java.io.File
 import java.io.Serializable
 
 internal const val SQLITE_NATIVE_ACCESS_MODULE = "dev.erst.fingrind.sqlite"
+internal const val CORE_NATIVE_ACCESS_MODULE = "dev.erst.fingrind.core"
 internal const val UNNAMED_NATIVE_ACCESS_ARGUMENT = "--enable-native-access=ALL-UNNAMED"
 internal const val SUN_MISC_UNSAFE_MEMORY_ACCESS_ARGUMENT = "--sun-misc-unsafe-memory-access=allow"
 internal const val DISABLE_CLASS_DATA_SHARING_ARGUMENT = "-Xshare:off"
 
 internal fun JavaForkOptions.enableSqliteNamedNativeAccess() {
     jvmArgs("--enable-native-access=$SQLITE_NATIVE_ACCESS_MODULE")
+}
+
+internal fun JavaForkOptions.enableCoreNamedNativeAccess() {
+    jvmArgs("--enable-native-access=$CORE_NATIVE_ACCESS_MODULE")
+}
+
+internal fun JavaForkOptions.enableJazzerNativeAccess() {
+    enableUnnamedNativeAccess()
+    enableCoreNamedNativeAccess()
 }
 
 internal fun JavaForkOptions.addSqliteNamedModule() {
